--- a/src/html/tables.html
+++ b/src/html/tables.html
@@ -1,16 +1,26 @@
 <section class="tables">
-<div class="tables__info__container">
-  <h2 class="tables__info__title">making tables heroes</h2>
-  <p class="tables__info__description">Chairs, cabinets, but especially tables by Joli are durable 
-    products, designed to last and to be used intensively.</p>
-  <div class="tables__info__buttons">
-    <a class="button__fields__link" href="#">about us</a>
-    <a class="button__fields__link" href="#">collections</a>
+  <div class="tables__info__container">
+    <h2 class="tables__info__title">making tables heroes</h2>
+    <p class="tables__info__description">
+      Chairs, cabinets, but especially tables by Joli are durable products,
+      designed to last and to be used intensively.
+    </p>
+    <div class="tables__info__buttons">
+      <a class="button__fields__link radius" href="#">about us</a>
+      <a class="button__fields__link" href="#">collections</a>
+    </div>
   </div>
-</div>
-<div class="tables__images__container">
-  <div class="tables__image"></div>
-  <div class="tables__image"></div>
-  <div class="tables__image"></div>
-</div>
+  <div class="tables__images__container">
+    <div class="tables__image-table2">
+      <img src="images/table2.svg" alt="" width="300" height="180" />
+    </div>
+    <div class="tables__images__bottom">
+      <div class="tables__image-table">
+        <img src="images/table.svg" width="250" height="425" alt="" />
+      </div>
+      <div class="tables__image-sofa">
+        <img src="images/sofa.svg" width="167" height="250" alt="" />
+      </div>
+    </div>
+  </div>
 </section>
