--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       @@include('html/header.html', {})
       <main class="page">
         @@include('html/lasting.html', {}) @@include('html/tables.html', {})
-        @@include('html/collections.html', {})
+        @@include('html/collections.html', {}) @@include('html/dealer.html', {})
       </main>
       @@include('html/footer.html', {})
     </div>
