--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       <main class="page">
         @@include('html/lasting.html', {}) @@include('html/tables.html', {})
         @@include('html/collections.html', {}) @@include('html/dealer.html', {})
+        @@include('html/terrace.html', {})
       </main>
       @@include('html/footer.html', {})
     </div>
