add photo & become & manages & form blocks

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
       <main class="page">
         @@include('html/lasting.html', {}) @@include('html/tables.html', {})
         @@include('html/collections.html', {}) @@include('html/dealer.html', {})
-        @@include('html/terrace.html', {})
+        @@include('html/terrace.html', {}) @@include('html/manages.html', {})
+        @@include('html/become.html', {}) @@include('html/photo.html', {})
+        @@include('html/form.html', {})
       </main>
       @@include('html/footer.html', {})
     </div>
