--- a/src/html/collections.html
+++ b/src/html/collections.html
@@ -16,6 +16,7 @@
     </div>
     <div class="collection__slider">
       <div class="collection__slider__image">
+        <h5 class="collection__category">central</h5>
         <img src="images/central.svg" alt="" width="591" height="379" />
       </div>
       <div class="collection__slider__info">
@@ -31,6 +32,7 @@
   <div class="collection__right">
     <div class="collection__subblock">
       <div class="collection__subblock__image">
+        <h5 class="collection__category">olivo</h5>
         <img src="images/olivo.svg" alt="" />
       </div>
       <div class="collection__subblock__description">
