--- a/src/html/dealer.html
+++ b/src/html/dealer.html
@@ -1,8 +1,11 @@
 <section class="dealer">
   <div class="dealer__left">
-    <h2 class="dealer__title">find a dealer</h2>
-    <p class="dealer__description">We work together with dealers in 19 countries, all over the world. Find out which one is closest to you.</p>
-    <input type="text" class="dealer__input" placeholder="Your location"/>
+    <h2 class="dealer__title">find&nbsp;&nbsp;&nbsp;&nbsp; a dealer</h2>
+    <p class="dealer__description">
+      We work together with dealers in 19 countries, all over the world. Find
+      out which one is closest to you.
+    </p>
+    <input type="text" class="dealer__input" placeholder="Your location" />
     <a class="dealer__button radius" href="#">Search</a>
   </div>
   <div class="dealer__right"></div>
