--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,79 @@
 <footer class="footer">
+  <div class="footer__logo">
+    <img src="images/logo.svg" alt="" />
+  </div>
   <div class="footer__container">
-    dcsd
+    <div class="footer__top">
+      <div class="footer__nav">
+        <div class="footer__collections">
+          <span class="footer__chapter"><a href="">collections</a> </span>
+          <ul>
+            <li><a>Wire </a></li>
+            <li><a>Curve </a></li>
+            <li><a> Fizz</a></li>
+            <li><a>Marguerite </a></li>
+          </ul>
+        </div>
+        <div class="footer__products">
+          <span class="footer__chapter"><a href="">products</a></span>
+          <ul>
+            <li><a> Tables</a></li>
+            <li><a>Chairs </a></li>
+            <li><a> Cabinets</a></li>
+            <li><a>Accessories </a></li>
+          </ul>
+        </div>
+        <div class="footer__inspiration">
+          <span class="footer__chapter"><a href="">inspiration</a></span>
+          <ul>
+            <li>
+              <a>
+                Joli Days<br />
+                2022</a
+              >
+            </li>
+            <li><a> Terrace</a></li>
+            <li>
+              <a>
+                Ceremonies<br />
+                & Meetings</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="footer__about">
+          <span class="footer__chapter"> <a href="">about us</a></span>
+          <ul>
+            <li><a> Materials</a></li>
+            <li><a> Find a dealer</a></li>
+            <li><a>Professionals </a></li>
+            <li><a> News</a></li>
+          </ul>
+        </div>
+        <div class="footer__contact">
+          <span class="footer__chapter"><a href="">contact</a></span>
+          <ul>
+            <li><a>Industrielaan 5 </a></li>
+            <li><a>8520 Kortrijk </a></li>
+            <li><a> info@joli.be</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <div class="footer__privacy">
+        <a href=""
+          >Privacy &<br />
+          Cookie Policy</a
+        >
+      </div>
+      <div class="footer__disclaimer"><a href="">Disclaimer</a></div>
+      <div class="footer__made"><span>made by skinn</span></div>
+      <div class="footer__social">
+        <a href=""><img src="images/facebook.svg" alt="" /></a>
+        <a href=""><img src="images/instagram.svg" alt="" /></a>
+        <a href=""><img src="images/pinterest.svg" alt="" /></a>
+      </div>
+    </div>
   </div>
 </footer>
