--- a/src/html/tables.html
+++ b/src/html/tables.html
@@ -1,6 +1,9 @@
 <section class="tables">
   <div class="tables__info__container">
-    <h2 class="tables__info__title">making tables heroes</h2>
+    <h2 class="tables__info__title">
+      making<br />
+      tables <br />heroes
+    </h2>
     <p class="tables__info__description">
       Chairs, cabinets, but especially tables by Joli are durable products,
       designed to last and to be used intensively.
@@ -16,7 +19,7 @@
     </div>
     <div class="tables__images__bottom">
       <div class="tables__image-table">
-        <img src="images/table.svg" width="250" height="425" alt="" />
+        <img src="images/table.svg" width="250" height="410" alt="" />
       </div>
       <div class="tables__image-sofa">
         <img src="images/sofa.svg" width="167" height="250" alt="" />
